add arabic to roman feature